[gd_scene load_steps=30 format=3 uid="uid://c5hoj5uwpo50k"]

[ext_resource type="Script" path="res://Script/Battle.gd" id="1_0e6o8"]
[ext_resource type="Texture2D" uid="uid://dw4n8bol2lypy" path="res://background.webp" id="3_m72fd"]
[ext_resource type="FontFile" uid="uid://dmjie0htcxto3" path="res://arcadeclassic (1)/ARCADECLASSIC.TTF" id="5_5ekuj"]
[ext_resource type="Texture2D" uid="uid://bbnj75233vgij" path="res://Monster/Háº¯c Lang - Black Wolf/TimberWolf.png" id="5_m3r2p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fex27"]
atlas = ExtResource("5_m3r2p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_clr6r"]
atlas = ExtResource("5_m3r2p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_caw1c"]
atlas = ExtResource("5_m3r2p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht1q5"]
atlas = ExtResource("5_m3r2p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uyyao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fex27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clr6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caw1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht1q5")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ua7ya"]
radius = 72.0278

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nrfb"]
bg_color = Color(0.121569, 0.121569, 0.121569, 0.721569)
skew = Vector2(2.08165e-12, 2.08165e-12)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8ql2"]
bg_color = Color(0.752941, 0.756863, 0.745098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3el0"]
bg_color = Color(0.247059, 0.709804, 0.266667, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0x21t"]
atlas = ExtResource("5_m3r2p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtyqj"]
atlas = ExtResource("5_m3r2p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sarel"]
atlas = ExtResource("5_m3r2p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecrhi"]
atlas = ExtResource("5_m3r2p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0u5vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x21t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtyqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sarel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecrhi")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bempm"]
radius = 60.208

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njrq0"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.827451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvse4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsp8m"]
bg_color = Color(0.945098, 0.945098, 0.945098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0hv5"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
shadow_color = Color(0.34902, 0.34902, 0.34902, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo2ma"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo18s"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_jlmdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster/monster:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/player:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_utdjs"]
resource_name = "enemy_damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster/monster:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ujpdc"]
resource_name = "player_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/player:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rxq8"]
_data = {
"RESET": SubResource("Animation_jlmdg"),
"enemy_damage": SubResource("Animation_utdjs"),
"player_damaged": SubResource("Animation_ujpdc")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0e6o8")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("3_m72fd")
metadata/_edit_use_anchors_ = true

[node name="Player" type="CharacterBody2D" parent="."]

[node name="player" type="AnimatedSprite2D" parent="Player"]
texture_filter = 1
position = Vector2(287, 310)
scale = Vector2(12.3906, 11.4063)
sprite_frames = SubResource("SpriteFrames_uyyao")
autoplay = "default"
frame_progress = 0.485621

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(285, 342)
shape = SubResource("CircleShape2D_ua7ya")

[node name="Panel2" type="Panel" parent="Player"]
offset_left = 53.0
offset_top = 24.0
offset_right = 534.0
offset_bottom = 133.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7nrfb")

[node name="ProgressBar" type="ProgressBar" parent="Player/Panel2"]
layout_mode = 0
offset_left = 70.0
offset_top = 62.0
offset_right = 432.0
offset_bottom = 89.0
size_flags_vertical = 2
size_flags_stretch_ratio = 4.0
theme_override_styles/background = SubResource("StyleBoxFlat_b8ql2")
theme_override_styles/fill = SubResource("StyleBoxFlat_t3el0")
value = 70.0

[node name="Label" type="Label" parent="Player/Panel2"]
layout_mode = 0
offset_left = 29.0
offset_top = 10.0
offset_right = 229.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 37
text = "PLAYER"

[node name="Monster" type="CharacterBody2D" parent="."]

[node name="monster" type="AnimatedSprite2D" parent="Monster"]
texture_filter = 1
position = Vector2(843, 314)
scale = Vector2(12.125, 11.2188)
sprite_frames = SubResource("SpriteFrames_0u5vg")
autoplay = "default"
frame_progress = 0.654441
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monster"]
position = Vector2(841, 335)
shape = SubResource("CircleShape2D_bempm")

[node name="Panel" type="Panel" parent="Monster"]
offset_left = 622.0
offset_top = 24.0
offset_right = 1103.0
offset_bottom = 133.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7nrfb")

[node name="ProgressBar" type="ProgressBar" parent="Monster/Panel"]
layout_mode = 0
offset_left = 73.0
offset_top = 63.0
offset_right = 435.0
offset_bottom = 91.0
size_flags_vertical = 2
size_flags_stretch_ratio = 4.0
theme_override_styles/background = SubResource("StyleBoxFlat_b8ql2")
theme_override_styles/fill = SubResource("StyleBoxFlat_t3el0")
value = 70.0

[node name="Label" type="Label" parent="Monster/Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 258.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 37
text = "MONSTER"

[node name="Action" type="Panel" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 0
offset_left = -1.0
offset_top = 495.0
offset_right = 1147.0
offset_bottom = 648.0
auto_translate = false
theme_override_styles/panel = SubResource("StyleBoxFlat_njrq0")

[node name="action_button" type="GridContainer" parent="Action"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -489.0
offset_top = -59.5
offset_right = 184.0
offset_bottom = 103.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 13
columns = 2

[node name="Arm" type="Button" parent="Action/action_button"]
layout_mode = 2
size_flags_horizontal = 15
size_flags_vertical = 15
size_flags_stretch_ratio = 6.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_hvse4")
theme_override_styles/hover = SubResource("StyleBoxFlat_tsp8m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tsp8m")
text = "ARM"

[node name="Leg" type="Button" parent="Action/action_button"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "LEG"

[node name="Chest" type="Button" parent="Action/action_button"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "CHEST"

[node name="Appendages" type="Button" parent="Action/action_button"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g0hv5")
theme_override_styles/hover = SubResource("StyleBoxFlat_uo2ma")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2ma")
text = "APPENDAGES"

[node name="textbox" type="Label" parent="Action"]
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 639.0
offset_bottom = 135.0
theme_override_fonts/font = ExtResource("5_5ekuj")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_xo18s")
text = "TEXT GOES HEREEE"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2rxq8")
}

[connection signal="pressed" from="Action/action_button/Arm" to="." method="_on_arm_pressed"]
[connection signal="pressed" from="Action/action_button/Leg" to="." method="_on_leg_pressed"]
[connection signal="pressed" from="Action/action_button/Chest" to="." method="_on_chest_pressed"]
[connection signal="pressed" from="Action/action_button/Appendages" to="." method="_on_appendages_pressed"]
